--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,5 +9,23 @@
     "more": "More",
     "close": "Close",
     "dark_mode": "Dark Mode",
-    "light_mode": "Light Mode"
+    "light_mode": "Light Mode",
+    "hour": "hour",
+    "suggested_for_you": "Suggested for you",
+    "view_all": "View all",
+    "likes": "likes",
+    "view_more": "View more",
+    "comment": "comments",
+    "follow": "Follow",
+    "follows": "follows",
+    "switch": "Switch",
+    "send": "Send",
+    "Comment": "Comment",
+    "previous": "Previous",
+    "following": "Following",
+    "follower": "followers",
+    "post": "posts",
+    "started_following_you": "started following you",
+    "week": "week",
+    "no_results_found": "No results found."
 }
