--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -9,5 +9,23 @@
     "more": "Xem thêm",
     "close": "Đóng",
     "dark_mode": "Chế độ tối",
-    "light_mode": "Chế độ sáng"
+    "light_mode": "Chế độ sáng",
+    "hour": "giờ",
+    "suggested_for_you": "Gợi ý cho bạn",
+    "view_all": "Xem tất cả",
+    "likes": "thích",
+    "view_more": "Xem thêm",
+    "comment": "bình luận",
+    "follow": "theo dõi",
+    "follows": "theo dõi",
+    "switch": "Chuyển",
+    "send": "Gửi",
+    "Comment": "Bình luận",
+    "previous": "trước đó",
+    "following": "đang theo dõi",
+    "follower": "người theo dõi",
+    "post": "bài viết",
+    "started_following_you": "đã bắt đầu theo dõi bạn",
+    "week": "tuần",
+    "no_results_found": "Không tìm thấy kết quả nào."
 }
