--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -24,7 +24,7 @@
     "following": "Following",
     "follower": "followers",
     "post": "posts",
-    "started_following_you": "started following you",
+    "started_following_you": "sent a friend request",
     "no_results_found": "No results found.",
     "year": "year ago",
     "month": "month ago",
