--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -24,7 +24,7 @@
     "following": "đang theo dõi",
     "follower": "người theo dõi",
     "post": "bài viết",
-    "started_following_you": "đã bắt đầu theo dõi bạn",
+    "started_following_you": "đã gửi lời mời kết bạn",
     "no_results_found": "Không tìm thấy kết quả nào.",
     "year": "năm trước",
     "month": "tháng trước",
