Latex: exp;ain entities

--- a/baocao/main.tex
+++ b/baocao/main.tex
@@ -5,6 +5,8 @@
 \usepackage{titlesec}
 \usepackage{enumitem}
 \usepackage{graphicx}
+\usepackage{array}
+\usepackage{longtable} 
 
 % Tùy chỉnh định dạng cho \part, \chapter, \section, \subsection
 \titleformat{\part}{\Huge\bfseries\center}{\thepart}{1em}{}
