Latex: exp;ain entities

--- a/baocao/header/title.tex
+++ b/baocao/header/title.tex
@@ -7,7 +7,7 @@
     \includegraphics[width=4cm]{./img/logo.png} % Chèn logo 
     \vspace{0.5cm} % Giảm khoảng cách
     
-    {\Large \textbf{HỌC PHẦN: PHÁT TRIỂN PHẦN MỀM MÃ NGUỒN MỞ}} \\[0.5cm]
+    {\Large \textbf{HỌC PHẦN: XÂY DỰNG PHẦN MỀM THEO MÔ HÌNH PHÂN LỚP}} \\[0.5cm]
     {\Large Dự án Clone Instagram} \\[0.5cm]
 
     \vspace{0.5cm} % Giảm khoảng cách
@@ -27,7 +27,7 @@
 
     \vspace{0.5cm}
 
-    \textbf{Giáo viên hướng dẫn:} Đỗ Như Tài \\[0.5cm]
+    \textbf{Giáo viên hướng dẫn:} Từ Lãng Phiêu \\[0.5cm]
     
     \vfill
     {\Large TP.HCM, 2025}
