--- a/baocao/header/title.tex
+++ b/baocao/header/title.tex
@@ -28,6 +28,8 @@
     \vspace{0.5cm}
 
     \textbf{Giáo viên hướng dẫn:} Từ Lãng Phiêu \\[0.5cm]
+
+    \textbf{Email liên hệ sinh viên:} vankiet27012004@gmail.com \\[0.5cm]
     
     \vfill
     {\Large TP.HCM, 2025}
